@@ -12,6 +12,7 @@
         <link rel="stylesheet" type="text/css" href="./font-awesome/font-awesome.min.css" />
     </head>
     <body onload="connect_with_cookie()">
+        <div id="tree"></div>
         <div id="connected">
             <spam id="return" class="return pointer padding_11 w15 text_center" onclick="back()"><i class="fa fa-arrow-left"></i></spam>
             <spam id="save" class="save pointer padding_11 w15 text_center" onclick="save()"><i class="fa fa-floppy-o"></i></spam>
