@@ -12,5 +12,5 @@
 #   |                                                          |
 
 #START{
-__version__="0.2.29"
+__version__="0.2.30-beta"
 #}END.
