@@ -1,1 +1,1 @@
-0.2.29
+0.2.30-beta
